--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+        <input type="text" id="dagJsonInput" placeholder="Enter your DAG json here..." />
+        <br><br>
+        <button onclick="generateDagDiagram()">Visualize DAG</button>
         <script src="script.js"></script>
     </body>
 </html>
