removing input and button after diagram generation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <input type="text" id="dagJsonInput" placeholder="Enter your DAG json here..." />
         <br><br>
-        <button onclick="generateDagDiagram()">Visualize DAG</button>
+        <button id="btn" onclick="generateDagDiagram()">Visualize DAG</button>
         <script src="script.js"></script>
     </body>
 </html>
