added title to page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+        <h1 id="title">DAG Visualizer</h1>
         <input type="text" id="dagJsonInput" placeholder="Enter your DAG json here..." />
         <br><br>
         <button id="btn" onclick="generateDagDiagram()">Visualize DAG</button>
